--- a/MusicStore/DataObjects/DataObjects.csproj
+++ b/MusicStore/DataObjects/DataObjects.csproj
@@ -43,6 +43,10 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="Instrument.cs" />
+    <Compile Include="InstrumentFamily.cs" />
+    <Compile Include="InstrumentType.cs" />
+    <Compile Include="InstrumentTypeVM.cs" />
+    <Compile Include="InstrumentVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Employee.cs" />
   </ItemGroup>
