--- a/MusicStore/DataAccessLayer/DataAccessLayer.csproj
+++ b/MusicStore/DataAccessLayer/DataAccessLayer.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CartAccessor.cs" />
+    <Compile Include="CustomerAccessor.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="ICartAccessor.cs" />
+    <Compile Include="ICustomerAccessor.cs" />
     <Compile Include="IInstrumentAccessor.cs" />
     <Compile Include="InstrumentAccessor.cs" />
     <Compile Include="IUserAccessor.cs" />
