--- a/MusicStore/DataAccessLayer/DataAccessLayer.csproj
+++ b/MusicStore/DataAccessLayer/DataAccessLayer.csproj
@@ -48,8 +48,10 @@
     <Compile Include="ICustomerAccessor.cs" />
     <Compile Include="IInstrumentAccessor.cs" />
     <Compile Include="IInvoiceAccessor.cs" />
+    <Compile Include="IInvoiceLineAccessor.cs" />
     <Compile Include="InstrumentAccessor.cs" />
     <Compile Include="InvoiceAccessor.cs" />
+    <Compile Include="InvoiceLineAccessor.cs" />
     <Compile Include="IUserAccessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAccessor.cs" />
