--- a/MusicStore/DataObjects/DataObjects.csproj
+++ b/MusicStore/DataObjects/DataObjects.csproj
@@ -46,6 +46,7 @@
     <Compile Include="InstrumentType.cs" />
     <Compile Include="InstrumentTypeVM.cs" />
     <Compile Include="InstrumentVM.cs" />
+    <Compile Include="Invoice.cs" />
     <Compile Include="InvoiceLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Employee.cs" />
