--- a/MusicStore/DataObjects/DataObjects.csproj
+++ b/MusicStore/DataObjects/DataObjects.csproj
@@ -48,6 +48,7 @@
     <Compile Include="InstrumentVM.cs" />
     <Compile Include="Invoice.cs" />
     <Compile Include="InvoiceLine.cs" />
+    <Compile Include="InvoiceLineVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Employee.cs" />
   </ItemGroup>
